css/styles.css
/* ... */
/* Hide Scrollbar */

html {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none;    /* Firefox */
}

html::-webkit-scrollbar {   /* Chrome, Safari and Opera */
  display: none;
}

/* Global */

body {
    background-color: #c0c0c0;
    color: white;
    font-family: 'Montserrat', sans-serif;
    font-size: 24px;
}

.dark-text {
  color: #1c343c;
}

.noscript {
  font-weight: bold;
  text-align: center;
  color: #888 !important;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* width: 95%; */
  max-width: 1280px;
  margin-top: 25px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 2em 0 2em;
  overflow: hidden;
  /* min-height: 100vh; */
}

.wrapper-disabled {
  margin: 0;
}

h1, h2, h3, h4, h5 {
  color: #c0c0c0;
  font-weight: bold;
  font-family: sans-serif;
  text-transform: uppercase;
  transition: all 0.5s ease-in-out 0s;
}

h1 {
  /* font-size: 8em; */
  font-size: 16vmin !important;
  text-shadow: -0.025em 0.025em 0.056em rgba(0,0,0,0.4), 0.025em -0.025em 0.056em rgba(255,255,255,0.7);
  margin: 65px 0 0 0;
}

h1 + p {
  margin: 0;
  font-style: italic;
  color: #ff0b44;
}

h2 {
  font-size: 5em;
  margin-top: 0.5em;
  margin-bottom: 0.2em;
  text-shadow: -0.025em 0.025em 0.056em rgba(0,0,0,0.4), 0.025em -0.025em 0.056em rgba(255,255,255,0.7);
}

h3 {
  font-size: 2.5em;
  text-shadow: -0.025em 0.025em 0.056em rgba(0,0,0,0.4), 0.025em -0.025em 0.056em rgba(255,255,255,0.7);
  margin: 32px 0;
}

h3.stage {
  font-size: 8vmin !important;
  margin: 1em 0 -8px 0 !important;
}

h3.overlay-hl {
  color: white;
  text-shadow: none;
}

h4 {
  color: white;
  font-size: 2.2em;
  margin: 0.4em 0 0.2em 0;
}

h5 {
  color: white;
  font-size: 2em;
  margin: 0.6em 0 0.2em 0;
}

video {
  max-width: 500px; 
  align-self: center;
}

#games {
  animation: neon1 1.5s ease-in-out infinite alternate;
}

#graphics {
  animation: neon2 1.5s ease-in-out infinite alternate;
}

#application {
  animation: neon3 1.5s ease-in-out infinite alternate;
}

#web {
  animation: neon4 1.5s ease-in-out infinite alternate;
}

.flex-row {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  /* -webkit-align-items: center; */
  margin: 0 0 1em 0;
}

.svg-sizer {
  width: 25vmin;
  height: 25vmin;
  display: flex;
  flex: 0.5;
}

.lw-img {
  flex: 1;
  width: auto; 
  height: auto;
  /* margin-left: 25px; */
  /* max-height: 15em; */
  filter: drop-shadow(-2px -2px 6px rgba(0,0,0,0.4)) drop-shadow(2px 2px 6px rgba(255,255,255,0.7));
  transition: all 0.5s;
  opacity: 0.8;
}

.section::after {
  content: "";
  background-color: #c0c0c0;
  width: 100%;
  height: 4px;
  display: block;
  box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
  margin: 2em 0px;
}

.section p, .section ul {
  color: #444;
}

#hidden-content p,#hidden-content ul {
  color: whitesmoke;
}

#hidden-content a.button {
  background-color: rgba(0,0,0,0);
  color: white;
  font-family: 'Staatliches', cursive;
  font-size: 1.3em;
  text-decoration: none;
  padding: 5px 10px;
  border-style: solid;
  border-color: white;
  margin: 0.8em;
  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
  border-radius: 25px;
  width: 70%;
  text-align: center;
  align-self: center;
  cursor: pointer;
  transition: background-color 0.5s, color 0.5s;
  transition-timing-function: ease-in-out;
}

span.btn-details {
  border: 2px solid gray;
  border-radius: 7px;
  padding: 1px 5px;
  font-weight: bold;
  margin-right: 0.2em;
  margin-left: 0.2em;
  color: gray;
}

#cardwrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#cardwrapper > i {
  width: 300px;
  margin: 1em;
}

.card {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: flex-start;
  width: 300px;
  height: 420px;
  box-shadow: -1px 2px 4px rgba(0,0,0,0.4), 1px -2px 4px rgba(255,255,255,0.7);
  border-radius: 20px;
  /* border: solid 1px #b0b0b0; */
  margin: 2em 1em;
  filter: saturate(0.5);
  transition: all 0.5s ease-in-out 0s;
}

.card.hidden {
  display: none;
}

.card-header {
  border-radius: 10px;
  margin: 0.5em 0.5em 0.1em 0.5em;
  padding: 0.5em;
  box-shadow: inset -5px 5px 6px #a7a7a7,
  inset 5px -5px 6px #d9d9d9;
  transition: all 0.5s ease-in-out 0s;
}

.card-header > img {
  opacity: 100%;
  width: 100%;
  border-radius: 5px;
  transition: all 0.5s ease-in-out 0s;
}

.card-content {
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  padding: 0.25em 0.75em;
}

#card-tech {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0.25em 0.75em;
}

#card-tech object {
  height: 20px;
  margin: 0 0.5rem;
  filter: contrast(30%);
}

#card-tag-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* align-self: end; */
  margin-bottom: 0.2em;
}

#card-tag-wrapper > div {
  display: flex;
}

#card-tag-wrapper > p {
  color: #5D5E60;
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
}

#card-tag {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 75px;
  height: 30px;
  box-shadow: inset -5px 5px 6px #a7a7a7, inset 5px -5px 6px #d9d9d9;
  border-radius: 10px;
  background-color: #c0c0c0;
  color: darkcyan;
  font-size: 8px;
  font-weight: bold;
  text-align: center;
  text-transform: uppercase;
  align-self: end;
  margin: 0.5em;
}

#card-headline {
  color: black !important;
  font-weight: bold;
  font-size: 16px;
  margin: 0;
}

#card-info {
  font-size: 16px;
  color: black !important;
  margin: 0;
}

#card-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  cursor: pointer;
  text-transform: uppercase;
  background-color: #c0c0c0;
  min-width: 70px;
  padding: 18px 20px;
  margin: 0.5em .2em;
  text-align: center;
  border-radius: 10px;
  box-shadow: -1px 2px 5px rgba(0,0,0,0.4), 1px -2px 5px rgba(255,255,255,0.7);
  transition: all .2s ease-in-out;
}
/* ... */

